This file documents the revision history for the Monitoring Webinterface Thruk.

1.46     not yet released
          - optional favicon problem counter
          - display action/notes url on host/servicegroup pages
          - panorama view:
            - optional auto hiding panel header
          - Bug Fixes
            - fixed using multiple groups in cgi.cfg

1.44     Mon Aug 27 15:17:31 CEST 2012
          - play sounds only for unhandled problems
          - Bug Fixes
            - fixed adding report with empty crontab
            - fixed looping startup.html
            - fixed taint mode error on debian

1.42     Thu Aug 23 17:55:54 CEST 2012
          - panorama view:
            - added host details panlet
            - link service details to service list
            - show messages from send commands
            - add possibility to remove downtimes
            - show server time and login
            - update to extjs 4.1.1
          - Bug Fixes
            - fixed authentication in recurring downtimes

1.40     Fri Aug  3 16:54:16 CEST 2012
          - change backends in config tool
          - use wait feature for acks/downtimes
          - change backends in config tool
          - panorama view:
            - added mine map panlet
            - added service details panlet
            - fixed problem with initial view
          - Bug Fixes
            - fixed reports when no state selected
            - fixed problem with cronjobs on pkg updates

1.38     Fri Jul 27 18:14:00 CEST 2012
          - added button to check/uncheck all columns for status excel export
          - panorama view:
            - added auto rotating tabs
            - added hosts / services panlet
            - added host / service totals panlet
            - added server metrics panlet
            - added filter for all host/services based panlets
            - generic url panlet can now show external urls
            - fixed generic url panlet when using css selector